Start with Gunicorn

--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -18,9 +18,9 @@ exitcodes=0
 startretries=0
 
 [program:gunicorn]
-command=python manage.py runserver 0.0.0.0:8000
-directory=/home/updater/shellyupdater
-#command=/bin/bash -c "gunicorn shellyupdater.wsgi -b 0.0.0.0:8000 --workers=3 --timeout=600"
+#command=python manage.py runserver 0.0.0.0:8000
+#directory=/home/updater/shellyupdater
+command=/bin/bash -c "gunicorn shellyupdater.wsgi -b 0.0.0.0:8000 --workers=1 --timeout=600"
 autostart=true
 autorestart=false
 
