--- a/shellyupdater/requirements.txt
+++ b/shellyupdater/requirements.txt
@@ -1,9 +1,11 @@
+Django==2.2.11
 certifi==2019.11.28
 chardet==3.0.4
-Django==2.2.11
+django-environ==0.4.5
 gunicorn==20.0.4
 idna==2.9
 paho-mqtt==1.5.0
+preload==2.0
 pytz==2019.3
 requests==2.23.0
 sqlparse==0.3.1
