Fix in DB DIR Settings

--- a/shellyupdater/shellyupdater/.env.example
+++ b/shellyupdater/shellyupdater/.env.example
@@ -5,6 +5,9 @@ DEBUG=True
 SECRET_KEY="place-your-secret-key-here"
 ALLOWED_HOSTS="127.0.0.1,192.168.56.101"
 
+# DATABASE
+DATABASE_DIR='/home/updater/data'
+
 # MQTT
 MQTT_BROKER_ADDRESS='ip.or.hostname'
 MQTT_USERNAME=''
