Added Bulk ShellyUpdater functionality

--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -17,6 +17,22 @@ autorestart=false
 exitcodes=0
 startretries=0
 
+[program:load_data_0]
+command=python manage.py loaddata MasterDataShellySettings.json
+directory=/home/updater/shellyupdater
+autostart=true
+autorestart=false
+exitcodes=0
+startretries=2
+
+[program:load_data_1]
+command=python manage.py loaddata MasterDataShellySettingsMatrix.json
+directory=/home/updater/shellyupdater
+autostart=true
+autorestart=false
+exitcodes=0
+startretries=2
+
 [program:gunicorn]
 #command=python manage.py runserver 0.0.0.0:8000
 #directory=/home/updater/shellyupdater
