--- a/shellyupdater/requirements.txt
+++ b/shellyupdater/requirements.txt
@@ -1,12 +1,16 @@
-Django==2.2.11
-certifi==2019.11.28
+certifi==2020.4.5.1
 chardet==3.0.4
+decorator==4.4.2
+Django==2.2.11
 django-environ==0.4.5
 gunicorn==20.0.4
 idna==2.9
+jsonpath-ng==1.5.1
 paho-mqtt==1.5.0
+ply==3.11
 preload==2.0
 pytz==2019.3
 requests==2.23.0
+six==1.14.0
 sqlparse==0.3.1
 urllib3==1.25.8
