- Improvement in handling Shelly http requests - More Logging options

--- a/shellyupdater/shellyupdater/.env.example
+++ b/shellyupdater/shellyupdater/.env.example
@@ -25,3 +25,15 @@ STARTS_WITH_GUNICORN=False
 # SHELLY-HTTP (credentials to access your shellies)
 HTTP_SHELLY_USERNAME=''
 HTTP_SHELLY_PASSWORD=''
+
+# LOGGING
+LOG_LEVEL=DEBUG
+LOG_LEVEL_DB=INFO
+# SKIP can be SHELLY, HTTP and MQTT (single or as list)
+LOG_SKIP_STARTSWITH=MQTT
+
+# MEDIA_ROOT (Path in Docker)
+MEDIA_ROOT='/home/updater'
+
+# SHELLY-UPDATE SETTINGS AND STATUS THRESHOLD (0 = deactivate)
+MAX_INFO_DAYS=7
