--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -34,9 +34,7 @@ exitcodes=0
 startretries=2
 
 [program:gunicorn]
-#command=python manage.py runserver 0.0.0.0:8000
-#directory=/home/updater/shellyupdater
-command=/bin/bash -c "gunicorn shellyupdater.wsgi -b 0.0.0.0:8000 --workers=5 --timeout=600"
+command=/bin/bash -c "gunicorn shellyupdater.wsgi -b 0.0.0.0:8000 -k gthread --workers=5 --threads=10 --timeout=600 --preload"
 autostart=true
 autorestart=false
 
