- BugFixes in Error-Handling - Change in Supervisor Config - Updated README.md

--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -17,20 +17,12 @@ autorestart=false
 exitcodes=0
 startretries=0
 
-[program:load_data_0]
-command=python manage.py loaddata MasterDataShellySettings.json
+[program:load_data]
+command=python manage.py loaddata MasterDataShellySettings.json && python manage.py loaddata MasterDataShellySettingsMatrix.json
 directory=/home/updater/shellyupdater
 autostart=true
 autorestart=false
-exitcodes=0
-startretries=2
-
-[program:load_data_1]
-command=python manage.py loaddata MasterDataShellySettingsMatrix.json
-directory=/home/updater/shellyupdater
-autostart=true
-autorestart=false
-exitcodes=0
+exitcodes=0, 1
 startretries=2
 
 [program:gunicorn]
