Changes in MQTT Handling Changes in Startup routine Improvements in Logging Improvements in Error Handling

--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -9,24 +9,16 @@ autorestart=true
 autostart=true
 redirect_stderr=true
 
-[program:migrate]
-command=python manage.py migrate
+[program:migrate_load]
+command=/bin/bash -c "sh ./migrate_load.sh"
 directory=/home/updater/shellyupdater
 autostart=true
 autorestart=false
 exitcodes=0
 startretries=0
 
-[program:load_data]
-command=python manage.py loaddata MasterDataShellySettings.json && python manage.py loaddata MasterDataShellySettingsMatrix.json
-directory=/home/updater/shellyupdater
-autostart=true
-autorestart=false
-exitcodes=0, 1
-startretries=2
-
 [program:gunicorn]
-command=/bin/bash -c "gunicorn shellyupdater.wsgi -b 0.0.0.0:8000 -k gthread --workers=5 --threads=10 --timeout=600 --preload"
+command=/bin/bash -c "gunicorn shellyupdater.wsgi -b 0.0.0.0:8000 --timeout=600 --preload"
 autostart=true
 autorestart=false
 
