BugFix in ShellySettings Threshold

--- a/shellyupdater/shellyupdater/.env.example
+++ b/shellyupdater/shellyupdater/.env.example
@@ -29,7 +29,7 @@ HTTP_SHELLY_PASSWORD=''
 # LOGGING
 LOG_LEVEL=DEBUG
 LOG_LEVEL_DB=INFO
-# SKIP can be SHELLY, HTTP and MQTT (single or as list)
+# SKIP can be SHELLY, HTTP, DB and MQTT (single or as list)
 LOG_SKIP_STARTSWITH=MQTT
 
 # MEDIA_ROOT (Path in Docker)
