Enable MQTT Connect without credentials Fixes #3

--- a/shellyupdater/shellyupdater/.env.example
+++ b/shellyupdater/shellyupdater/.env.example
@@ -8,7 +8,7 @@ ALLOWED_HOSTS="127.0.0.1,192.168.56.101"
 # DATABASE
 DATABASE_DIR='/home/updater/data'
 
-# MQTT
+# MQTT (for MQTT without user/password comment these lines out)
 MQTT_BROKER_ADDRESS='ip.or.hostname'
 MQTT_USERNAME=''
 MQTT_PASSWORD=''
@@ -30,7 +30,7 @@ HTTP_SHELLY_PASSWORD=''
 LOG_LEVEL=DEBUG
 LOG_LEVEL_DB=INFO
 # SKIP can be SHELLY, HTTP, DB and MQTT (single or as list)
-LOG_SKIP_STARTSWITH=MQTT
+LOG_SKIP_STARTSWITH=
 
 # MEDIA_ROOT (Path in Docker)
 MEDIA_ROOT='/home/updater'
